# RAIIEngine

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
assets/shaders/: CMakeLists.txt  simple.frag  simple.vert
cmake-utils/: app_config.hpp.in  utils.cmake
engine/: CMakeLists.txt
engine/engine_vk/: CMakeLists.txt
engine/engine_vk/header/: buffer.hpp  command_dispatch.hpp  conversions.hpp  debug.hpp  device.hpp  device_manager.hpp  device_memory_manager.hpp  device_wrapper.hpp  engine_defaults.hpp  engine_vk.hpp  logical_device.hpp  p_includes.hpp  pipeline.hpp  queue_manager.hpp  renderer.hpp  shader.hpp  surface.hpp  swapchain.hpp
engine/engine_vk/include/: debug.hpp  device_wrapper.hpp  engine_vk.hpp  engine_vk_factory.hpp  p_includes.hpp  queue_manager.hpp  renderer.hpp  surface.hpp  swapchain.hpp
engine/engine_vk/src/: buffer.cpp  command_dispatch.cpp  debug.cpp  device.cpp  device_manager.cpp  device_memory_manager.cpp  device_wrapper.cpp  engine_vk.cpp  engine_vk_factory.cpp  logical_device.cpp  pipeline.cpp  queue_manager.cpp  renderer.cpp  shader.cpp  surface.cpp  swapchain.cpp
engine/geometry/: CMakeLists.txt
engine/geometry/include/: vertex.hpp
engine/i_engine/: CMakeLists.txt
engine/i_engine/include/: i_engine.hpp  i_engine_factory.hpp
engine/render_descriptions/: CMakeLists.txt
engine/render_descriptions/include/: formats.hpp  shader_description.hpp
engine/window_handler/: CMakeLists.txt  window_handler.cpp  window_handler.hpp
reflection/: CMakeLists.txt
reflection/header/: conversions.hpp
reflection/include/: shader_reflection.hpp
reflection/src/: shader_reflection.cpp
render_descriptor/: CMakeLists.txt
render_descriptor/include/: formats.hpp  shader_descriptor.hpp  types.hpp
samples/: CMakeLists.txt
samples/base/: CMakeLists.txt
samples/engine_vk_init/: CMakeLists.txt
samples/engine_window_base/: CMakeLists.txt
samples/engine_window_base/src/: main.cpp
samples/sample_base/: CMakeLists.txt
samples/sample_base/src/: main.cpp
samples/sample_engine_vk_init/: CMakeLists.txt
samples/sample_engine_vk_init/src/: main.cpp
samples/sample_engine_window_base/: CMakeLists.txt
samples/sample_engine_window_base/src/: main.cpp
stubs/: stub.cpp  stub.hpp
tests/: CMakeLists.txt
tests/reflection/: CMakeLists.txt
tests/reflection/assets/shaders/: SimpleVertex.vert
tests/reflection/src/: main.cpp
utils/include/: utils.hpp
utils/src/: utils.cpp
